wacc/test/golden/syntaxErr.variables.varNoName
# variable declaration missing variable name

# Output:
# #syntax_error#

# Exit:
# 100


# Program:

begin
  int = 42
end


In test/wacc_examples/invalid/syntaxErr/variables/varNoName.wacc (line 13, column 7):
unexpected "="
expected array type or identifier
> begin
>   int = 42
>       ^
> end
